# ziptest

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yaml  test.yaml
dnas/ziptest/workdir/: dna.yaml
dnas/ziptest/zomes/coordinator/profiles/: Cargo.toml
dnas/ziptest/zomes/coordinator/ziptest/: Cargo.toml
dnas/ziptest/zomes/coordinator/ziptest/src/: lib.rs  thing.rs  utils.rs
dnas/ziptest/zomes/integrity/profiles/: Cargo.toml
dnas/ziptest/zomes/integrity/ziptest/: Cargo.toml
ui/: index.html  package.json  vite.config.ts
ui/src/: AboutDialog.svelte  App.svelte  Avatar.svelte  Bunch.svelte  Controller.svelte  ControllerCreate.svelte  ControllerStream.svelte  Folk.svelte  StreamPane.svelte  ThingItem.svelte  ThingsPane.svelte  Toolbar.svelte  index.js  store.ts  stream.ts  svgIcons.ts  thingStore.ts
ui/src/icons/: LogoIcon.svelte
we_dev/: config.ts  tool-library.ts
workdir/: happ.yaml  web-happ.yaml
