[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "1"

[workspace.dependencies]
hdi = "=0.4.1"
hdk = "=0.3.1"
serde = "1"

[workspace.dependencies.ziptest]
path = "dnas/ziptest/zomes/coordinator/ziptest"

[workspace.dependencies.ziptest_integrity]
path = "dnas/ziptest/zomes/integrity/ziptest"

[workspace.dependencies.profiles]
path = "dnas/ziptest/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/ziptest/zomes/integrity/profiles"
