[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "profiles"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles"

[dependencies]
hc_zome_profiles_coordinator = { git = "https://github.com/holochain-open-dev/profiles", rev = "b79351b56c9825ea2e886aca8c3208e6a9919434" }
